--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "nodejs-loggers",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "prod": "NODE_ENV=production nodemon src/index.js && nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
