--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "prod": "NODE_ENV=production nodemon src/index.js && nodemon src/index.js"
+    "prod": "set NODE_ENV=production  && nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
